--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Login – <%= shopName %></title>
+  <link rel="stylesheet" href="<%= basePath %>/main.css">
+</head>
+<body>
+  <h1>Login</h1>
+
+  <form method="POST" action="<%= basePath %>/loggedin">
+    <p>Username: <input type="text" name="username" required></p>
+    <p>Password: <input type="password" name="password" required></p>
+    <p><input type="submit" value="Login"></p>
+  </form>
+
+  <p><a href="<%= basePath %>/">⬅ Home</a> | <a href="<%= basePath %>/register">Register</a></p>
+</body>
+</html>
 
