--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <%- include('partials/head') %>
+    <%- include('head.ejs') %>
 </head>
 <body>
-    <%- include('partials/header') %>
+    <%- include('header.ejs') %>
     <main>
         <h2>About This Application</h2>
-        <p>This project was created for the Dynamic Web Apps module at Goldsmiths, University of London. [cite_start]The aim is to consolidate learnings from the labs [cite: 7] [cite_start]into a single, functional web application centered around the theme of health and fitness[cite: 9].</p>
+        <p>This project was created for the Dynamic Web Apps module at Goldsmiths, University of London. The aim is to consolidate learnings from the labs into a single, functional web application centered around the theme of health and fitness.</p>
         
         <h3>Technology Stack Used:</h3>
         <ul>
-            [cite_start]<li>**Backend:** Node.js and Express [cite: 15, 16]</li>
-            [cite_start]<li>**Templating:** EJS [cite: 17]</li>
-            [cite_start]<li>**Database:** MySQL [cite: 18]</li>
+            <li>**Backend:** Node.js and Express</li>
+            <li>**Templating:** EJS</li>
+            <li>**Database:** MySQL</li>
             <li>**Security:** `bcrypt` for password hashing (Additional Technique)</li>
             <li>**Validation:** `express-validator` and `express-sanitizer` (Additional Technique)</li>
         </ul>
-        [cite_start]<p>The application is deployed to the Goldsmiths virtual server environment [cite: 20] [cite_start]and all code is shared via GitHub[cite: 22].</p>
+        <p>The application is deployed to the Goldsmiths virtual server environment and all code is shared via GitHub.</p>
     </main>
-    <%- include('partials/footer') %>
+    <%- include('footer.ejs') %>
 </body>
 </html>
